fix: fix layout issue/fallback failed issue

--- a/src/components/Genre/Genre.module.scss
+++ b/src/components/Genre/Genre.module.scss
@@ -9,6 +9,7 @@
 
   :global(.container) {
     width: 100%;
+    box-sizing: border-box;
   }
 
   .row {
